# logger

./: README.md
include/: Logger.h  c_logger.h
plain_b/: CMakeLists.txt  Logger.cpp  Logger.h  main.cpp
plan_a/: CMakeLists.txt
plan_a/src/: Logger.cpp
plan_a/test/: CMakeLists.txt  main_c.c
src/: c_logger.cpp
test/: main.cpp
